--- a/src/app/componentes/main.module.css
+++ b/src/app/componentes/main.module.css
@@ -6,14 +6,16 @@
     flex-wrap: wrap;
     gap: 50px;
     background-color: rgb(161, 188, 255);
+    
 }
 
 .card{
-    width: 400px;
-    height: 550px;
+    width: 550px;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     border-radius: 24px;
-    background-color: rgb(60, 155, 176);
+    background-color: rgb(81, 108, 207);
 }
+
