Atualizado parte 2 dia 30.05
- No Header.js adicionei o botão de acionar novo produto

- No header.module.css alinhei os itens do navbar_menu no centro e estilizei o botão, mudei a altura, a largura, a margem e a borda dele

--- a/src/app/componentes/header.module.css
+++ b/src/app/componentes/header.module.css
@@ -21,6 +21,16 @@
 .navbar_menu {
     display: flex;
     justify-content: space-around;
+    align-items: center;
+}
+
+.button{
+    background-color: rgb(92, 92, 243);
+    height: 40px;
+    width: 120px;
+    margin-left: 20px;
+    border-radius: 40%;
+    border: 0;
 }
 
 .navbar_item {
