--- a/src/app/componentes/footer.module.css
+++ b/src/app/componentes/footer.module.css
@@ -1,10 +1,24 @@
 .rodape{
     display: flex;
     justify-content: center;
-    height: 100px;
+    flex-direction: column;
+    align-items: center;
+    height: 300px;
     width: 100%;
     background-color:rgb(134, 150, 253);
     bottom: 0;
     left: 0;
  
 }
+
+.lista{
+    float: left;
+    margin-right: 60px;
+}
+
+.logo{
+    left: 590px;
+    bottom: 110px;
+    position: relative;
+}
+
