--- a/src/app/componentes/header.module.css
+++ b/src/app/componentes/header.module.css
@@ -1,14 +1,14 @@
 
-
 .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
     background-color:rgb(134, 150, 253);
     padding: 1rem;
+    height: 100px;
 }
 
-.navbar_brand {
+.navbar_div {
     display: flex;
     justify-content: space-between;
     color: #000000;
@@ -37,14 +37,6 @@
     margin-left: 1.5rem;
 }
 
-.img{
-    height: 60px;
-    width: 60px;
-}
-
-.a{
-    text-decoration: none;
-}
 
 .frase{
     font-size: 20px;
